# Copyright 2023 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//extensions/buildflags/buildflags.gni")

if (is_android) {
  import("//build/config/android/rules.gni")
  import("//third_party/jni_zero/jni_zero.gni")
}

source_set("page_load_metrics") {
  public = [
    "observers/bookmark_bar_page_load_metrics_observer.h",
    "observers/captcha_metrics_observer.h",
    "observers/captcha_provider_manager.h",
    "observers/chrome_gws_abandoned_page_load_metrics_observer.h",
    "observers/chrome_gws_page_load_metrics_observer.h",
    "observers/core/amp_page_load_metrics_observer.h",
    "observers/core/ukm_page_load_metrics_observer.h",
    "observers/document_write_page_load_metrics_observer.h",
    "observers/foreground_duration_ukm_observer.h",
    "observers/from_gws_page_load_metrics_observer.h",
    "observers/gws_hp_page_load_metrics_observer.h",
    "observers/histogram_suffixes.h",
    "observers/https_engagement_metrics/https_engagement_page_load_metrics_observer.h",
    "observers/https_engagement_metrics/https_engagement_service.h",
    "observers/https_engagement_metrics/https_engagement_service_factory.h",
    "observers/javascript_frameworks_ukm_observer.h",
    "observers/lcp_critical_path_predictor_page_load_metrics_observer.h",
    "observers/loading_predictor_page_load_metrics_observer.h",
    "observers/multi_tab_loading_page_load_metrics_observer.h",
    "observers/new_tab_page_initiated_page_load_metrics_observer.h",
    "observers/new_tab_page_page_load_metrics_observer.h",
    "observers/omnibox_suggestion_used_page_load_metrics_observer.h",
    "observers/page_anchors_metrics_observer.h",
    "observers/prefetch_page_load_metrics_observer.h",
    "observers/protocol_page_load_metrics_observer.h",
    "observers/scheme_page_load_metrics_observer.h",
    "observers/security_state_page_load_metrics_observer.h",
    "observers/signed_exchange_page_load_metrics_observer.h",
    "observers/tab_strip_page_load_metrics_observer.h",
    "observers/translate_page_load_metrics_observer.h",
    "observers/webui_page_load_metrics_observer.h",
    "page_load_metrics_initialize.h",
  ]

  public_deps = [
    "//base",
    "//chrome/browser/predictors/lcp_critical_path_predictor:headers",
    "//chrome/browser/profiles:profile",
    "//components/google/core/common",
    "//components/history/core/browser",
    "//components/keyed_service/core",
    "//components/metrics",
    "//components/page_load_metrics/browser",
    "//components/page_load_metrics/common",
    "//components/page_load_metrics/common:page_load_metrics_mojom",
    "//components/page_load_metrics/google/browser",
    "//components/security_state/core",
    "//content/public/browser",
    "//net",
    "//services/metrics/public/cpp:ukm_builders",
    "//services/network/public/mojom",
    "//third_party/blink/public/common:headers",
    "//ui/base",
    "//url",
  ]

  if (is_android) {
    public += [ "observers/android_page_load_metrics_observer.h" ]
  }

  if (!is_android) {
    public += [
      "observers/initial_webui_page_load_metrics_observer.h",
      "observers/non_tab_webui_page_load_metrics_observer.h",
      "observers/top_chrome_webui_metrics_observer.h",
    ]
  }

  if (is_chromeos) {
    public += [ "observers/ash_session_restore_page_load_metrics_observer.h" ]
  }

  if (enable_extensions_core) {
    public += [ "observers/serp_page_load_metrics_observer.h" ]
  }
}

source_set("impl") {
  sources = [
    "observers/bookmark_bar_page_load_metrics_observer.cc",
    "observers/captcha_metrics_observer.cc",
    "observers/captcha_provider_manager.cc",
    "observers/chrome_gws_abandoned_page_load_metrics_observer.cc",
    "observers/chrome_gws_page_load_metrics_observer.cc",
    "observers/core/amp_page_load_metrics_observer.cc",
    "observers/core/ukm_page_load_metrics_observer.cc",
    "observers/document_write_page_load_metrics_observer.cc",
    "observers/foreground_duration_ukm_observer.cc",
    "observers/from_gws_page_load_metrics_observer.cc",
    "observers/gws_hp_page_load_metrics_observer.cc",
    "observers/histogram_suffixes.cc",
    "observers/https_engagement_metrics/https_engagement_page_load_metrics_observer.cc",
    "observers/https_engagement_metrics/https_engagement_service.cc",
    "observers/https_engagement_metrics/https_engagement_service_factory.cc",
    "observers/javascript_frameworks_ukm_observer.cc",
    "observers/lcp_critical_path_predictor_page_load_metrics_observer.cc",
    "observers/loading_predictor_page_load_metrics_observer.cc",
    "observers/multi_tab_loading_page_load_metrics_observer.cc",
    "observers/new_tab_page_initiated_page_load_metrics_observer.cc",
    "observers/new_tab_page_page_load_metrics_observer.cc",
    "observers/omnibox_suggestion_used_page_load_metrics_observer.cc",
    "observers/optimization_guide_page_load_metrics_observer.cc",
    "observers/optimization_guide_page_load_metrics_observer.h",
    "observers/page_anchors_metrics_observer.cc",
    "observers/prefetch_page_load_metrics_observer.cc",
    "observers/protocol_page_load_metrics_observer.cc",
    "observers/scheme_page_load_metrics_observer.cc",
    "observers/security_state_page_load_metrics_observer.cc",
    "observers/signed_exchange_page_load_metrics_observer.cc",
    "observers/tab_strip_page_load_metrics_observer.cc",
    "observers/translate_page_load_metrics_observer.cc",
    "observers/webui_page_load_metrics_observer.cc",
    "page_load_metrics_initialize.cc",
  ]

  public_deps = [
    ":page_load_metrics",
    "//chrome/browser:browser_public_dependencies",
  ]

  deps = [
    "//chrome/browser:after_startup_task_utils",
    "//chrome/browser/actor",
    "//chrome/browser/bookmarks",
    "//chrome/browser/content_settings",
    "//chrome/browser/content_settings:content_settings_factory",
    "//chrome/browser/engagement",
    "//chrome/browser/heavy_ad_intervention",
    "//chrome/browser/history",
    "//chrome/browser/history_clusters",
    "//chrome/browser/optimization_guide",
    "//chrome/browser/predictors",
    "//chrome/browser/preloading/prefetch/no_state_prefetch",
    "//chrome/browser/search",
    "//chrome/browser/search_engines",
    "//chrome/browser/signin",
    "//chrome/browser/translate",
    "//chrome/browser/ui/browser_window",
    "//chrome/common",
    "//components/content_settings/core/browser",
    "//components/page_load_metrics/browser/observers/ad_metrics",
    "//components/security_state/content",
    "//components/site_engagement/content",
    "//components/ukm",
    "//services/metrics/public/cpp:metrics_cpp",
    "//third_party/blink/public/common",
  ]

  if (is_android) {
    sources += [ "observers/android_page_load_metrics_observer.cc" ]
    deps += [
      ":jni_headers",
      "//chrome/browser/offline_pages",
      "//chrome/browser/ui/android/tab_model",
    ]
  }

  if (!is_android) {
    sources += [
      "observers/initial_webui_page_load_metrics_observer.cc",
      "observers/non_tab_webui_page_load_metrics_observer.cc",
      "observers/top_chrome_webui_metrics_observer.cc",
    ]
    deps += [
      "//chrome/browser/performance_manager/public/user_tuning",
      "//chrome/browser/ui/read_anything",
      "//chrome/browser/ui/waap",
      "//chrome/browser/ui/waap:waap_utils",
      "//chrome/browser/ui/waap:window_metrics_manager",
      "//chrome/browser/ui/webui/metrics_reporter",
      "//chrome/browser/ui/webui/omnibox_popup",
      "//chrome/browser/ui/webui/top_chrome",
      "//components/webapps/isolated_web_apps:scheme",
    ]
  }

  if (is_chromeos) {
    sources += [ "observers/ash_session_restore_page_load_metrics_observer.cc" ]
    deps += [ "//ash" ]
  }

  if (enable_extensions_core) {
    sources += [ "observers/serp_page_load_metrics_observer.cc" ]
    deps += [ "//chrome/browser/safe_browsing" ]
  }
}

if (is_android) {
  android_library("java") {
    srcjar_deps = [ ":jni_headers" ]
    sources = [ "java/src/org/chromium/chrome/browser/page_load_metrics/PageLoadMetrics.java" ]

    deps = [
      "//base:base_java",
      "//content/public/android:content_java",
      "//third_party/jni_zero:jni_zero_java",
    ]
  }

  generate_jni("jni_headers") {
    sources = [ "java/src/org/chromium/chrome/browser/page_load_metrics/PageLoadMetrics.java" ]
  }
}

source_set("unit_tests") {
  testonly = true

  # Some of these tests declare file-scope objects with non-trivial destructors.
  configs += [ "//build/config/compiler:no_exit_time_destructors" ]

  sources = [
    "metrics_web_contents_observer_unittest.cc",
    "observers/captcha_metrics_observer_unittest.cc",
    "observers/captcha_provider_manager_unittest.cc",
    "observers/core/amp_page_load_metrics_observer_unittest.cc",
    "observers/core/ukm_page_load_metrics_observer_unittest.cc",
    "observers/document_write_page_load_metrics_observer_unittest.cc",
    "observers/from_gws_page_load_metrics_observer_unittest.cc",
    "observers/gws_page_load_metrics_observer_unittest.cc",
    "observers/lcp_critical_path_predictor_page_load_metrics_observer_unittest.cc",
    "observers/loading_predictor_page_load_metrics_observer_unittest.cc",
    "observers/multi_tab_loading_page_load_metrics_observer_unittest.cc",
    "observers/page_anchors_metrics_observer_unittest.cc",
    "observers/page_load_metrics_observer_test_harness.cc",
    "observers/page_load_metrics_observer_test_harness.h",
    "observers/prefetch_page_load_metrics_observer_unittest.cc",
    "observers/protocol_page_load_metrics_observer_unittest.cc",
    "observers/scheme_page_load_metrics_observer_unittest.cc",
    "observers/signed_exchange_page_load_metrics_observer_unittest.cc",
    "observers/translate_page_load_metrics_observer_unittest.cc",
  ]

  deps = [
    ":page_load_metrics",
    "//base",
    "//base/test:test_support",
    "//chrome/browser:after_startup_task_utils",
    "//chrome/browser/actor:test_support",
    "//chrome/browser/search_engines",
    "//chrome/test:test_support",
    "//components/history_clusters/core",
    "//components/page_load_metrics/browser",
    "//components/page_load_metrics/browser:test_support",
    "//components/page_load_metrics/common:test_support",
    "//components/translate/core/browser:test_support",
    "//content/test:test_support",
    "//testing/gmock",
    "//testing/gtest",
  ]

  if (!is_android) {
    sources += [
      "observers/initial_webui_page_load_metrics_observer_unittest.cc",
      "observers/non_tab_webui_page_load_metrics_observer_unittest.cc",
      "observers/top_chrome_webui_metrics_observer_unittest.cc",
    ]
  }

  if (is_android) {
    sources += [ "observers/android_page_load_metrics_observer_unittest.cc" ]
    deps += [
      "//chrome/browser/actor",
      "//chrome/browser/bookmarks",
      "//chrome/browser/content_settings:content_settings_factory",
      "//chrome/browser/history_clusters",
      "//chrome/browser/navigation_predictor",
      "//components/ukm:test_support",
      "//components/ukm/content",
    ]
  }
}

if (!is_android) {
  source_set("browser_tests") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    # Some of these tests declare file-scope objects with non-trivial
    # destructors.
    configs += [ "//build/config/compiler:no_exit_time_destructors" ]

    sources = [
      "observers/ad_metrics/ad_density_intervention_browsertest.cc",
      "observers/ad_metrics/ads_page_load_metrics_observer_browsertest.cc",
      "observers/ad_metrics/large_sticky_ad_intervention_browsertest.cc",
      "observers/ad_metrics/overlay_popup_ad_intervention_browsertest.cc",
      "observers/bookmark_bar_page_load_metrics_observer_browsertest.cc",
      "observers/core/amp_page_load_metrics_observer_browsertest.cc",
      "observers/core/ukm_page_load_metrics_observer_browsertest.cc",
      "observers/foreground_duration_ukm_observer_browsertest.cc",
      "observers/https_engagement_metrics/https_engagement_page_load_metrics_observer_browsertest.cc",
      "observers/initial_webui_page_load_metrics_observer_browsertest.cc",
      "observers/javascript_frameworks_ukm_observer_browsertest.cc",
      "observers/multi_tab_loading_page_load_metrics_observer_browsertest.cc",
      "observers/new_tab_page_initiated_page_load_metrics_observer_browsertest.cc",
      "observers/new_tab_page_page_load_metrics_observer_browsertest.cc",
      "observers/non_tab_webui_page_load_metrics_observer_browsertest.cc",
      "observers/page_anchors_metrics_observer_browsertest.cc",
      "observers/prefetch_page_load_metrics_observer_browsertest.cc",
      "observers/security_state_page_load_metrics_observer_browsertest.cc",
      "observers/signed_exchange_page_load_metrics_browsertest.cc",
      "observers/tab_strip_page_load_metrics_observer_browsertest.cc",
      "observers/third_party_metrics_observer_browsertest.cc",
      "observers/webui_page_load_metrics_observer_browsertest.cc",
      "page_load_metrics_browsertest.cc",
    ]

    deps = [
      ":page_load_metrics",
      "//base",
      "//chrome/browser:after_startup_task_utils",
      "//chrome/browser/lookalikes",
      "//chrome/browser/lookalikes:test_support",
      "//chrome/browser/prefs:util",
      "//chrome/browser/preloading",
      "//chrome/browser/preloading/prefetch/no_state_prefetch",
      "//chrome/browser/preloading/prefetch/no_state_prefetch:test_support",
      "//chrome/browser/preloading/prerender",
      "//chrome/browser/search_engines",
      "//chrome/browser/ui/waap",
      "//chrome/browser/ui/waap:window_metrics_manager",
      "//chrome/browser/ui/webui:webui_util",
      "//chrome/browser/ui/webui/webui_toolbar:test_support",
      "//chrome/browser/ui/webui/webui_toolbar/adapters:impl",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
      "//components/embedder_support:user_agent",
      "//components/heavy_ad_intervention",
      "//components/infobars/content",
      "//components/lookalikes/core:safety_tips",
      "//components/no_state_prefetch/browser",
      "//components/no_state_prefetch/common",
      "//components/page_load_metrics/browser:test_support",
      "//components/page_load_metrics/browser/observers/ad_metrics",
      "//components/page_load_metrics/browser/observers/ad_metrics:test_support",
      "//components/page_load_metrics/common:test_support",
      "//content/test:browsertest_support",
      "//content/test:test_support",
      "//pdf:features",
      "//testing/gtest",
    ]

    if (is_chromeos) {
      sources += [ "observers/ash_session_restore_page_load_metrics_observer_browsertest.cc" ]
      deps += [
        "//chrome/browser:chrome_browser_main",
        "//chrome/browser/ash/app_restore",
        "//chrome/browser/ash/app_restore:test_support",
      ]
    }
  }
}

if (is_android) {
  source_set("android_browsertests") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [
      "observers/ad_metrics/ad_density_intervention_android_browsertest.cc",
    ]

    deps = [
      ":page_load_metrics",
      "//base",
      "//chrome/test:test_support",
      "//components/messages/android/test:test_support_cpp",
      "//components/page_load_metrics/browser:test_support",
      "//components/page_load_metrics/browser/observers/ad_metrics:test_support",
      "//components/ukm:test_support",
      "//content/test:test_support",
      "//testing/gtest",
    ]
  }
}
